opam-version: "2.0"
synopsis: "Mock OCaml bindings for Xen's xentoollog"
maintainer: "xen-api@lists.xen.org"
authors: "Christian Lindig <christian.lindig@citrix.com>"
license: "LGPL-2.1-only WITH OCaml-LGPL-linking-exception"
homepage: "https://github.com/xapi-project/xenctrl"
bug-reports: "https://github.com/xapi-project/xenctrl/issues"
depends: [
  "ocaml"
  "dune" {build}
  "base-unix"
]
build: ["dune" "build" "-p" name "-j" jobs]
depexts: [
  ["m4" "libxen-dev" "libsystemd-dev"] {os-distribution = "debian"}
  ["libxen-dev" "uuid-dev"] {os-distribution = "ubuntu"}
  ["xen-devel" "libuuid-devel"] {os-distribution = "centos"}
  ["xen-devel"] {os-distribution = "fedora"}
  ["xen-devel"] {os-distribution = "rhel"}
  ["xen-devel"] {os-distribution = "oraclelinux"}
  ["xen-dom0-libs-devel" "xen-libs-devel"] {os = "xenserver"}
  ["xen-dev"] {os-distribution = "alpine"}
]

dev-repo: "git+https://github.com/xapi-project/xenctrl.git"
url {
  src: "https://github.com/xapi-project/xenctrl/archive/master.tar.gz"
}
